Agregar la dependencia y configuracion a este microservicio como un eureka client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.application.name=servicio-item
 server.port=8002
-# Configuracion de Ribbon con nuestro "Feign client" existente.
-# De esta forma estamos desacoplando el IP y el puerto de nuestro codigo procedente de la interfaz "ProductoClienteRest" 
-# Ademas de realizar un balanceo de carga al usar Ribbon.
-# servicio-productos : Nombre del microservicio al que nos conectaremos.
-# localhost:8001,localhost:9001 : Son las instancias las cuales contienen las IPs y puertos.
-# Mas adelante con Eureka estos IPs y puertos seran automaticos y ya no se van a escribir.
-# Tenemos que configurar nuestro "Ribbon Client" en la clase principal que contiene en el metodo main(),
-# anotando la clase con "@RibbonClient(name = "servicio-productos")".
-servicio-productos.ribbon.listOfServers=localhost:8001,localhost:9001
+# Configuracion (obligatorio en caso el servidor eureka se encuentre en otra maquina con IPs distintas) indicando cual es nuestro servidor eureka
+# Por lo que cada cliente(microservicio) envia al servidor de Eureka una señal conocida como "heartbeat" (latido de corazon) al servidor para indicar que está habilitado para proveer datos(ip, puerto, nombre de maquina) al servidor Eureka
+# Cada 30 segundos cada cliente debe enviar esta señal para indicar que continua activo.
+# Si deja de enviar esta señal, se elimina del registro de eureka.
+# Y para volver a activarse debe enviar 3 de estas señales(30 segundos cada una).
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
